--- a/docs_sample/manifest.json
+++ b/docs_sample/manifest.json
@@ -5,17 +5,17 @@
     "lang": "en-US",
     "icons": [
         {
-            "src": "images/graduate-cap.48x48.png",
+            "src": "images/career/graduate-cap.48x48.png",
             "type": "image/png",
             "sizes": "48x48"
         },
         {
-            "src": "images/graduate-cap.96x96.png",
+            "src": "images/career/graduate-cap.96x96.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "images/graduate-cap.192x192.png",
+            "src": "images/career/graduate-cap.192x192.png",
             "type": "image/png",
             "sizes": "192x192"
         }
